[build-system]
build-backend = "cmeel"
requires = ["cmeel-spirv-tools", "cmeel[build]"]

[project]
description = "cmeel distribution for glslang"
license = "BSD-3-Clause"
name = "cmeel-glslang"
requires-python = ">= 3.8"
version = "13.1.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-glslang"
repository = "https://github.com/cmake-wheel/cmeel-glslang.git"
upstream = "https://github.com/KhronosGroup/glslang"

[tool.cmeel]
configure-args = ["-DALLOW_EXTERNAL_SPIRV_TOOLS=ON", "-DBUILD_SHARED_LIBS=ON", "-DGLSLANG_TESTS=ON"]
has-sitelib = false
source = "glslang"

[tool.tomlsort]
all = true
